[#15] Add Streams.partition(Predicate)