@@ -59,7 +59,7 @@ public class SeqTest {
 
     @Test
     public void testZipEqualLength() {
-        List<Tuple2<Integer, String>> list = Seq.of(1, 2, 3).zip(Seq.of("a", "b", "c")).collect(toList());
+        List<Tuple2<Integer, String>> list = Seq.of(1, 2, 3).zip(Seq.of("a", "b", "c")).toList();
 
         assertEquals(3, list.size());
         assertEquals(1, (int) list.get(0).v1);
@@ -72,7 +72,7 @@ public class SeqTest {
 
     @Test
     public void testZipDifferingLength() {
-        List<Tuple2<Integer, String>> list = Seq.of(1, 2).zip(Seq.of("a", "b", "c", "d")).collect(toList());
+        List<Tuple2<Integer, String>> list = Seq.of(1, 2).zip(Seq.of("a", "b", "c", "d")).toList();
 
         assertEquals(2, list.size());
         assertEquals(1, (int) list.get(0).v1);
@@ -83,10 +83,10 @@ public class SeqTest {
 
     @Test
     public void testZipWithIndex() {
-        assertEquals(asList(), Seq.of().zipWithIndex().collect(toList()));
-        assertEquals(asList(tuple("a", 0L)), Seq.of("a").zipWithIndex().collect(toList()));
-        assertEquals(asList(tuple("a", 0L), tuple("b", 1L)), Seq.of("a", "b").zipWithIndex().collect(toList()));
-        assertEquals(asList(tuple("a", 0L), tuple("b", 1L), tuple("c", 2L)), Seq.of("a", "b", "c").zipWithIndex().collect(toList()));
+        assertEquals(asList(), Seq.of().zipWithIndex().toList());
+        assertEquals(asList(tuple("a", 0L)), Seq.of("a").zipWithIndex().toList());
+        assertEquals(asList(tuple("a", 0L), tuple("b", 1L)), Seq.of("a", "b").zipWithIndex().toList());
+        assertEquals(asList(tuple("a", 0L), tuple("b", 1L), tuple("c", 2L)), Seq.of("a", "b", "c").zipWithIndex().toList());
     }
 
     @Test
@@ -95,14 +95,14 @@ public class SeqTest {
         Tuple2<Seq<Integer>, Seq<Integer>> duplicate;
 
         duplicate = reset.get();
-        assertEquals(asList(1, 2, 3), duplicate.v1.collect(toList()));
-        assertEquals(asList(1, 2, 3), duplicate.v2.collect(toList()));
+        assertEquals(asList(1, 2, 3), duplicate.v1.toList());
+        assertEquals(asList(1, 2, 3), duplicate.v2.toList());
 
         duplicate = reset.get();
-        assertEquals(asList(1, 2, 3, 1, 2, 3), Streams.concat(duplicate.v1, duplicate.v2).collect(toList()));
+        assertEquals(asList(1, 2, 3, 1, 2, 3), duplicate.v1.concat(duplicate.v2).toList());
 
         duplicate = reset.get();
-        assertEquals(asList(tuple(1, 1), tuple(2, 2), tuple(3, 3)), Streams.zip(duplicate.v1, duplicate.v2).collect(toList()));
+        assertEquals(asList(tuple(1, 1), tuple(2, 2), tuple(3, 3)), duplicate.v1.zip(duplicate.v2).toList());
     }
 
     @Test
@@ -116,12 +116,12 @@ public class SeqTest {
     public void testSlice() {
         Supplier<Seq<Integer>> s = () -> Seq.of(1, 2, 3, 4, 5, 6, 7, 8, 9, 10);
 
-        assertEquals(asList(3, 4, 5), s.get().slice(2, 5).collect(toList()));
-        assertEquals(asList(4, 5, 6), s.get().slice(3, 6).collect(toList()));
-        assertEquals(asList(), s.get().slice(4, 1).collect(toList()));
-        assertEquals(asList(1, 2, 3, 4, 5, 6), s.get().slice(0, 6).collect(toList()));
-        assertEquals(asList(1, 2, 3, 4, 5, 6), s.get().slice(-1, 6).collect(toList()));
-        assertEquals(asList(1, 2, 3, 4, 5, 6, 7, 8, 9, 10), s.get().slice(-1, 12).collect(toList()));
+        assertEquals(asList(3, 4, 5), s.get().slice(2, 5).toList());
+        assertEquals(asList(4, 5, 6), s.get().slice(3, 6).toList());
+        assertEquals(asList(), s.get().slice(4, 1).toList());
+        assertEquals(asList(1, 2, 3, 4, 5, 6), s.get().slice(0, 6).toList());
+        assertEquals(asList(1, 2, 3, 4, 5, 6), s.get().slice(-1, 6).toList());
+        assertEquals(asList(1, 2, 3, 4, 5, 6, 7, 8, 9, 10), s.get().slice(-1, 12).toList());
     }
 
     @Test
@@ -138,43 +138,63 @@ public class SeqTest {
     public void testSkipWhile() {
         Supplier<Seq<Integer>> s = () -> Seq.of(1, 2, 3, 4, 5);
 
-        assertEquals(asList(1, 2, 3, 4, 5), s.get().skipWhile(i -> false).collect(toList()));
-        assertEquals(asList(3, 4, 5), s.get().skipWhile(i -> i % 3 != 0).collect(toList()));
-        assertEquals(asList(3, 4, 5), s.get().skipWhile(i -> i < 3).collect(toList()));
-        assertEquals(asList(4, 5), s.get().skipWhile(i -> i < 4).collect(toList()));
-        assertEquals(asList(), s.get().skipWhile(i -> true).collect(toList()));
+        assertEquals(asList(1, 2, 3, 4, 5), s.get().skipWhile(i -> false).toList());
+        assertEquals(asList(3, 4, 5), s.get().skipWhile(i -> i % 3 != 0).toList());
+        assertEquals(asList(3, 4, 5), s.get().skipWhile(i -> i < 3).toList());
+        assertEquals(asList(4, 5), s.get().skipWhile(i -> i < 4).toList());
+        assertEquals(asList(), s.get().skipWhile(i -> true).toList());
     }
 
     @Test
     public void testSkipUntil() {
         Supplier<Seq<Integer>> s = () -> Seq.of(1, 2, 3, 4, 5);
 
-        assertEquals(asList(), s.get().skipUntil(i -> false).collect(toList()));
-        assertEquals(asList(3, 4, 5), s.get().skipUntil(i -> i % 3 == 0).collect(toList()));
-        assertEquals(asList(3, 4, 5), s.get().skipUntil(i -> i == 3).collect(toList()));
-        assertEquals(asList(4, 5), s.get().skipUntil(i -> i == 4).collect(toList()));
-        assertEquals(asList(1, 2, 3, 4, 5), s.get().skipUntil(i -> true).collect(toList()));
+        assertEquals(asList(), s.get().skipUntil(i -> false).toList());
+        assertEquals(asList(3, 4, 5), s.get().skipUntil(i -> i % 3 == 0).toList());
+        assertEquals(asList(3, 4, 5), s.get().skipUntil(i -> i == 3).toList());
+        assertEquals(asList(4, 5), s.get().skipUntil(i -> i == 4).toList());
+        assertEquals(asList(1, 2, 3, 4, 5), s.get().skipUntil(i -> true).toList());
     }
 
     @Test
     public void testLimitWhile() {
         Supplier<Seq<Integer>> s = () -> Seq.of(1, 2, 3, 4, 5);
 
-        assertEquals(asList(), s.get().limitWhile(i -> false).collect(toList()));
-        assertEquals(asList(1, 2), s.get().limitWhile(i -> i % 3 != 0).collect(toList()));
-        assertEquals(asList(1, 2), s.get().limitWhile(i -> i < 3).collect(toList()));
-        assertEquals(asList(1, 2, 3), s.get().limitWhile(i -> i < 4).collect(toList()));
-        assertEquals(asList(1, 2, 3, 4, 5), s.get().limitWhile(i -> true).collect(toList()));
+        assertEquals(asList(), s.get().limitWhile(i -> false).toList());
+        assertEquals(asList(1, 2), s.get().limitWhile(i -> i % 3 != 0).toList());
+        assertEquals(asList(1, 2), s.get().limitWhile(i -> i < 3).toList());
+        assertEquals(asList(1, 2, 3), s.get().limitWhile(i -> i < 4).toList());
+        assertEquals(asList(1, 2, 3, 4, 5), s.get().limitWhile(i -> true).toList());
     }
 
     @Test
     public void testLimitUntil() {
         Supplier<Seq<Integer>> s = () -> Seq.of(1, 2, 3, 4, 5);
 
-        assertEquals(asList(1, 2, 3, 4, 5), s.get().limitUntil(i -> false).collect(toList()));
-        assertEquals(asList(1, 2), s.get().limitUntil(i -> i % 3 == 0).collect(toList()));
-        assertEquals(asList(1, 2), s.get().limitUntil(i -> i == 3).collect(toList()));
-        assertEquals(asList(1, 2, 3), s.get().limitUntil(i -> i == 4).collect(toList()));
-        assertEquals(asList(), s.get().limitUntil(i -> true).collect(toList()));
+        assertEquals(asList(1, 2, 3, 4, 5), s.get().limitUntil(i -> false).toList());
+        assertEquals(asList(1, 2), s.get().limitUntil(i -> i % 3 == 0).toList());
+        assertEquals(asList(1, 2), s.get().limitUntil(i -> i == 3).toList());
+        assertEquals(asList(1, 2, 3), s.get().limitUntil(i -> i == 4).toList());
+        assertEquals(asList(), s.get().limitUntil(i -> true).toList());
+    }
+
+    @Test
+    public void testPartition() {
+        Supplier<Seq<Integer>> s = () -> Seq.of(1, 2, 3, 4, 5, 6);
+
+        assertEquals(asList(1, 3, 5), s.get().partition(i -> i % 2 != 0).v1.toList());
+        assertEquals(asList(2, 4, 6), s.get().partition(i -> i % 2 != 0).v2.toList());
+
+        assertEquals(asList(2, 4, 6), s.get().partition(i -> i % 2 == 0).v1.toList());
+        assertEquals(asList(1, 3, 5), s.get().partition(i -> i % 2 == 0).v2.toList());
+
+        assertEquals(asList(1, 2, 3), s.get().partition(i -> i <= 3).v1.toList());
+        assertEquals(asList(4, 5, 6), s.get().partition(i -> i <= 3).v2.toList());
+
+        assertEquals(asList(1, 2, 3, 4, 5, 6), s.get().partition(i -> true).v1.toList());
+        assertEquals(asList(), s.get().partition(i -> true).v2.toList());
+
+        assertEquals(asList(), s.get().partition(i -> false).v1.toList());
+        assertEquals(asList(1, 2, 3, 4, 5, 6), s.get().partition(i -> false).v2.toList());
     }
 }
